# messages-cli

./: .gitignore  README.md  pyproject.toml
fb-fetch-tool/: go.mod  go.sum  main.go
fb-threads-tool/: go.mod  main.go
messages_cli/: backends.py  cli.py  db.py  messenger_api.py  messenger_auth.py  send.py  telegram_db.py  telegram_send.py  utils.py  whatsapp_auth.py  whatsapp_db.py  whatsapp_send.py
wa-auth-tool/: go.mod  go.sum  main.go
wa-send-tool/: main.go
