[project]
name = "messages-cli"
version = "0.2.0"
description = "CLI for reading and searching local message databases (iMessage, Telegram, WhatsApp)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "phonenumbers>=8.13",
    "pycryptodome>=3.20",
    "mmh3>=4.1,<5",
]

[project.scripts]
messages = "messages_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
